--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -514,6 +514,20 @@ p {
     color: rgb(248 250 252 / var(--tw-text-opacity));
 }
 
+@keyframes pulseBorder {
+    0%, 100% {
+        box-shadow: 0 0 0 0 rgba(163, 255, 18, 0.5); /* Green shadow */
+    }
+    50% {
+        box-shadow: 0 0 20px 10px rgba(163, 255, 18, 0.7); /* Expanded green shadow */
+    }
+}
+
+.pulseAnimation {
+    animation: pulseBorder 1.5s infinite ease-in-out; /* Smooth infinite animation */
+}
+
+
 @media (min-width: 768px) {
     .title-section {
         font-size: 3.75rem;
